@@ -1,11 +1,15 @@
 version 1.7.5, in progress
 - max() and min() functions: extend the syntax to allow a list
-  largument
+  argument
 - Reading CSV data: automatically substitute '_' for illegal
   characters in variable names
 - Support DESTDIR for make install
 - Add Weibull distribution to the various gretl probability
   distribution functions
+- Fix for parsing a restriction with leading numerical term
+- New functions: dgnorm(), sdc()
+- User-defined functions: allow a descriptive string to
+  accompany each parameter, for use in GUI
   
 3/21/2008 version 1.7.4
 - Fix for ADF-GLS test with missing values
